--- a/app/web/template/about_payment.gohtml
+++ b/app/web/template/about_payment.gohtml
@@ -23,12 +23,9 @@
                 <a href="#" class="">{{ tr .App "qualifyingForReduction" }}</a>
             </p>
 
-            <a href="#" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+            <button class="govuk-button" data-module="govuk-button">
                 {{ tr .App "continueToPayment" }}
-                <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-                    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
-                </svg>
-            </a>
+            </button>
         </div>
     </div>
 {{ end }}
