Use anchor rather than button

--- a/app/web/template/about_payment.gohtml
+++ b/app/web/template/about_payment.gohtml
@@ -23,9 +23,9 @@
                 <a href="#" class="">{{ tr .App "qualifyingForReduction" }}</a>
             </p>
 
-            <button class="govuk-button" data-module="govuk-button">
+            <a href="#" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
                 {{ tr .App "continueToPayment" }}
-            </button>
+            </a>
         </div>
     </div>
 {{ end }}
