Add main.scss as a starting point for mod styles

--- a/app/web/assets/main.scss
+++ b/app/web/assets/main.scss
@@ -3,5 +3,4 @@ $moj-assets-path: "/static/assets/";
 
 @import "node_modules/govuk-frontend/govuk/all";
 @import "node_modules/@ministryofjustice/frontend/moj/all";
-@import "scss/patterns/task_list";
-@import "scss/patterns/trans_switch";
+@import "scss/main";
