--- a/app/web/template/payment_confirmation.gohtml
+++ b/app/web/template/payment_confirmation.gohtml
@@ -4,7 +4,21 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 {{/*            <h1 class="govuk-heading-xl">{{ tr .App "paymentConfirmation" }}</h1>*/}}
-            <h1 class="govuk-heading-xl">Payment received</h1>
+            <div class="govuk-panel govuk-panel--confirmation">
+                <h1 class="govuk-panel__title">
+                    Payment received
+                </h1>
+                <div class="govuk-panel__body">
+                    Your reference number<br><strong>{{ .PaymentReference }}</strong>
+                </div>
+            </div>
+
+            <h2 class="govuk-heading-m">Thank you for your payment</h2>
+            <p class="govuk-body">You have successfully paid for your finance and affairs LPA.</p>
+            <p class="govuk-body">We've sent you an email to confirm we've received your LPA application fee.</p>
+            <p class="govuk-body">If the email has not arrived in a few minutes, check your spam folder.</p>
+
+            <a class="govuk-button" href="/task-list">Continue</a>
         </div>
     </div>
 {{ end }}
