Fix back link when welsh

--- a/app/web/template/layout/page.gohtml
+++ b/app/web/template/layout/page.gohtml
@@ -91,7 +91,7 @@
 
         <div class="govuk-clearfix">
           {{ if .App.CanGoBack }}
-            <a class="govuk-back-link" href="/task-list">Back</a>
+            <a class="govuk-back-link" href="{{ link .App "/task-list" }}">Back</a>
           {{ end }}
 
           <ul class="trans-switch" id="language-switch" aria-label="Change your language">
