Final PR feedback actioned

--- a/app/web/template/payment_confirmation.gohtml
+++ b/app/web/template/payment_confirmation.gohtml
@@ -16,7 +16,7 @@
 
             {{ trHtml .App "paymentConfirmationContent" }}
 
-            <a class="govuk-button" href="/task-list">{{ tr .App "continueLink" }}</a>
+            { link .App "/task-list" }}
         </div>
     </div>
 {{ end }}
