Add 'select your identity options' page

--- a/app/web/template/how_long_have_you_known_certificate_provider.gohtml
+++ b/app/web/template/how_long_have_you_known_certificate_provider.gohtml
@@ -14,7 +14,7 @@
 
             {{ template "error-message" (errorMessage . "how-long") }}
 
-            {{ template "radios" (radios . "how-long" .HowLong
+            {{ template "radios" (items . "how-long" .HowLong
               (item "gte-2-years" "twoYearsOrMore")
               (item "lt-2-years" "lessThanTwoYears")
             ) }}
