--- a/app/web/template/payment_confirmation.gohtml
+++ b/app/web/template/payment_confirmation.gohtml
@@ -16,7 +16,7 @@
 
             {{ trHtml .App "paymentConfirmationContent" }}
 
-            <a class="govuk-button" href="{{ link .App "/task-list" }}">{{ tr .App "continue" }}</a>
+            <a class="govuk-button" href="{{ link .App .Continue }}">{{ tr .App "continue" }}</a>
         </div>
     </div>
 {{ end }}
