--- a/app/web/template/select_your_identity_options.gohtml
+++ b/app/web/template/select_your_identity_options.gohtml
@@ -19,6 +19,7 @@
             {{ template "error-message" (errorMessage . "options") }}
 
             {{ template "checkboxes" (items . "options" .Form.Options
+              (item "yoti" "theYoti")
               (item "passport" "aPassport")
               (item "driving licence" "aDrivingLicence")
               (item "government gateway account" "aGovernmentGatewayAccount")
