Move flow logic into the IdentityOption type
This now allows you to go back to the task-list and through the flow
again (skipping the actual Yoti call if already made), and should sensibly
handle if you change the options selected.

--- a/app/web/template/identity_with_yoti_callback.gohtml
+++ b/app/web/template/identity_with_yoti_callback.gohtml
@@ -14,6 +14,14 @@
                   {{ .FullName }}
                 </dd>
               </div>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Confirmed at
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  {{ formatDateTime .ConfirmedAt }}
+                </dd>
+              </div>
             </dl>
 
             <form novalidate method="post">
