--- a/app/web/template/your_chosen_identity_options.gohtml
+++ b/app/web/template/your_chosen_identity_options.gohtml
@@ -9,11 +9,11 @@
 
       <ul class="govuk-list govuk-list--bullet">
         {{ range .Selected }}
-          <li>{{ tr $.App (index $.ArticleLabels .) }}</li>
+          <li>{{ tr $.App .ArticleLabel }}</li>
         {{ end }}
       </ul>
 
-      <p class="govuk-body">{{ trFormat .App "wellConfirmYourIdentityUsing" "FirstChoice" (tr .App (index .Labels .FirstChoice)) "SecondChoice" (tr .App (index .Labels .SecondChoice)) "DonorFirstNames" .You.FirstNames "DonorLastName" .You.LastName }}</p>
+      <p class="govuk-body">{{ trFormat .App "wellConfirmYourIdentityUsing" "FirstChoice" (tr .App .FirstChoice.Label) "SecondChoice" (tr .App .SecondChoice.Label) "DonorFirstNames" .You.FirstNames "DonorLastName" .You.LastName }}</p>
 
       <form novalidate method="post">
         {{ template "continue-button" . }}
