Add signing confirmation page

--- a/app/web/template/read_your_lpa.gohtml
+++ b/app/web/template/read_your_lpa.gohtml
@@ -114,7 +114,7 @@
           <dd class="govuk-summary-list__value">
             {{ .Lpa.You.FirstNames }} {{ .Lpa.You.LastName }}
             <strong class="govuk-tag" style="float: right;">
-              {{ tr .App "idVerified" }} (we haven't done this yet)
+              {{ tr .App "idVerified" }}
             </strong>
           </dd>
         </div>
