--- a/app/web/template/choose_attorneys.gohtml
+++ b/app/web/template/choose_attorneys.gohtml
@@ -16,9 +16,21 @@
 
             {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
             {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
-            {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email") }}
+            {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
 
             {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
+
+            {{ if .DobWarning }}
+              <div class="govuk-warning-text">
+                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                <strong class="govuk-warning-text__text">
+                  <span class="govuk-warning-text__assistive">Warning</span>
+                  {{ tr .App .DobWarning }}
+                </strong>
+              </div>
+
+              <input type="hidden" name="ignore-warning" value="{{ .DobWarning }}" />
+            {{ end }}
 
             {{ template "continue-button" . }}
           </fieldset>
