--- a/app/web/template/what_happens_when_signing.gohtml
+++ b/app/web/template/what_happens_when_signing.gohtml
@@ -17,7 +17,7 @@
 
       <p class="govuk-body">{{ trHtml .App "theyMustAlwaysFollowTheRules" }}</p>
 
-      {{ template "details" (details . "whatHappensIfIChangeMyMind" "whatHappensIfIChangeMyMindContent") }}
+      {{ template "details" (details . "whatHappensIfIChangeMyMind" "whatHappensIfIChangeMyMindContent" false) }}
 
       <h2 class="govuk-heading-m">{{ tr .App "registeringYourLpa" }}</h2>
 
